<resources>
    <string name="app_name">Авто базар</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone">Телефон</string>
    <string name="password">Пароль</string>
    <string name="login">Вхід</string>
    <string name="goto_register">До реєстрації</string>

    <string name="product_title">Назва</string>
    <string name="product_description">Опис</string>
    <string name="products">Продукти</string>

</resources>