<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".LoginFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:padding="24dp"
    android:paddingTop="16dp">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="28dp"

        android:src="@drawable/covid" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/login"
            />

        <Button
            android:id="@+id/btnRegister"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_toStartOf="@id/btnLogin"
            android:layout_toLeftOf="@id/btnLogin"
            android:text="@string/goto_register" />

        <Button
            android:id="@+id/btnProducts"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_toStartOf="@+id/btnRegister"
            android:layout_toLeftOf="@+id/btnRegister"
            android:text="@string/products" />
    </RelativeLayout>
    <!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:layout_marginBottom="50dp"-->
<!--        android:text="@string/app_name"-->
<!--        android:textAllCaps="true"-->
<!--        android:textSize="16sp" />-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/phone_text_input"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="@string/phone">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/phone_edit_text"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:inputType="text"-->
<!--            android:maxLines="1" />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/password_text_input"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="5dp"-->
<!--        android:hint="@string/password"-->
<!--        app:endIconMode="password_toggle"-->
<!--        app:errorEnabled="true">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/password_edit_text"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:inputType="textPassword" />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <RelativeLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content">-->

<!--        <Button-->
<!--            android:id="@+id/btnLogin"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_alignParentEnd="true"-->
<!--            android:layout_alignParentRight="true"-->
<!--            android:text="@string/login"-->
<!--            />-->

<!--        <Button-->
<!--            android:id="@+id/btnRegister"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginEnd="12dp"-->
<!--            android:layout_marginRight="12dp"-->
<!--            android:layout_toStartOf="@id/btnLogin"-->
<!--            android:layout_toLeftOf="@id/btnLogin"-->
<!--            android:text="@string/goto_register"-->
<!--            style="?attr/materialButtonOutlinedStyle"-->
<!--            />-->

<!--    </RelativeLayout>-->






</LinearLayout>


</ScrollView>
